# riscv-gcc

./: Makefile.def  Makefile.in  config.guess  config.sub  configure  configure.ac  install-sh
gcc/: ChangeLog  Makefile.in  asan.c  collect-utils.c  collect2.c  combine.c  combine.cc  config.gcc  config.in  configure  configure.ac  dce.c  dwarf2out.cc  emit-rtl.cc  emit-rtl.h  expr.c  fold-const.c  gcc.c  genhooks.c  genmatch.cc  genmodes.c  genmodes.cc  genrecog.cc  gimple-isel.cc  gimple-pretty-print.c  gimple-ssa-isolate-paths.c  hooks.cc  hooks.h  hsa-brig.c  hsa-gen.c  internal-fn.cc  internal-fn.def  internal-fn.h  ipa-devirt.c  ira-build.cc  ira-coalesce.cc  ira-color.cc  ira-int.h  ira.cc  lra-constraints.c  (+30 more)
gcc/ada/: cio.c
gcc/c/: c-convert.c  c-typeck.c
gcc/c-family/: c-common.c  c-warn.c  cilk.c
gcc/common/config/riscv/: riscv-common.c  riscv-common.cc
gcc/config/riscv/: arch-canonicalize  bitmanip.md  constraints.md  crypto.md  elf.h  elf_hcos.h  fractional-cost.h  freebsd.h  freebsd64.h  gen-vector-iterator  generic.md  genrvv-type-indexer.cc  hcos.h  linux.h  md-parser  multilib-generator  none.h  peephole.md  pic.md  predicates.md  riscv-builtins-crypto.def  riscv-builtins-rvp.def  riscv-builtins.c  riscv-builtins.cc  riscv-c.c  riscv-c.cc  riscv-ftypes.def  riscv-gen-pack.c  riscv-insert-vsetvli.cc  riscv-modes.def  riscv-opts.h  riscv-passes.def  riscv-protos.h  riscv-sr.c  riscv-vector-builtins-functions.cc  riscv-vector-builtins-functions.def  riscv-vector-builtins-functions.h  riscv-vector-builtins-iterators.def  riscv-vector-builtins.cc  riscv-vector-builtins.def  (+37 more)
gcc/cp/: call.c  cvt.c  init.c  parser.c  pt.c  typeck.c
gcc/doc/: contrib.texi  extend.texi  install.texi  invoke.texi  passes.texi  tm.texi  tm.texi.in
gcc/lto/: lto.c
gcc/objcp/: ChangeLog
gcc/python/: Make-lang.in  README  config-lang.in  gpython.h  grammar.txt  lang-specs.h  lang.opt  py-builtins.c  py-builtins.h  py-dot-pass-check1.c  py-dot-pass-const_fold.c  py-dot-pass-genericify.c  py-dot-pass-manager.c  py-dot-pass-pretty_print.c  py-dot-pass-translate.c  py-dot-pass-types.c  py-dot.h  py-il-dot.c  py-il-dot.h  py-il-tree.h  py-lang.c  py-lexer.l  py-parser.y  py-runtime.c  py-runtime.def  py-runtime.h  py-runtime.tpl  py-spec.c  py-stmt-pass-const_fold.c  py-stmt-pass-lower.c  py-stmt-pass-mangr.c  py-stmt-pass-pretty_print.c  py-stmt-pass-types.c  py-tree.h  py-vec.c  py-vec.h
gcc/python/doc/: cclicenses.dtx  cclicenses.ins  myref.bib  thesis.aux  thesis.tex  thesis.toc
gcc/testsuite/: ChangeLog
gcc/testsuite/g++.dg/abi/: mangle-riscv-vector.C
gcc/testsuite/g++.dg/warn/: Warray-bounds-20.C
gcc/testsuite/g++.target/riscv/: rvv-large-stack.C  rvv_merge-1.C
gcc/testsuite/gcc.c-torture/execute/: 20101011-1.c
gcc/testsuite/gcc.dg/: 20020312-2.c  ifcvt-4.c  loop-8.c  stack-usage-1.c
gcc/testsuite/gcc.dg/analyzer/: file-1.c  file-2.c
gcc/testsuite/gcc.dg/torture/: pr39074-2.c  pr39074.c  pta-structcopy-1.c
gcc/testsuite/gcc.dg/tree-ssa/: ssa-dom-cse-2.c  ssa-fre-3.c  ssa-thread-14.c
gcc/testsuite/gcc.target/nvptx/: uniform-simt-1.c
gcc/testsuite/gcc.target/riscv/: Zknd-aes-01.c  Zknd-aes-02.c  Zkne-aes-01.c  Zkne-aes-02.c  Zknh-sha256.c  Zknh-sha512-01.c  Zknh-sha512-02.c  Zkr-pollentropy.c  Zksed-sm4.c  Zksh-sm3.c  arch-12.c  arch-7.c  attribute-8.c  check-stack.c  constraints-1.c  constraints-2.c  proc.sh  rvb-adduw.c  rvb-li-rori.c  rvb-sbset.c  rvb-sbxiw.c  rvb-shNadd-01.c  rvb-shNadd-02.c  rvb-shNadd-03.c  rvb-slliuw.c  rvb-zbb-andn-orn-xorn-01.c  rvb-zbb-andn-orn-xorn-02.c  rvb-zbb-min-max.c  rvb-zbb-rol-ror-01.c  rvb-zbb-rol-ror-02.c  rvb-zbb-rol-ror-03.c  rvb-zbb-sext-01.c  rvb-zbb-sext-02.c  rvb-zbb-sext_b.c  rvb-zbb-sext_h.c  rvb-zbbw.c  rvb-zbe-bext-bdep-01.c  rvb-zbe-bext-bdep-02.c  rvb-zbe-bext-bdep-03.c  rvb-zbe-pack-packu-02.c  (+175 more)
gcc/testsuite/gcc.target/riscv/rvp32_scan/: builtin-rvp-add16.c  builtin-rvp-add64.c  builtin-rvp-add8.c  builtin-rvp-ave.c  builtin-rvp-bitrev.c  builtin-rvp-cmpeq16.c  builtin-rvp-cmpeq8.c  builtin-rvp-count.c  builtin-rvp-cras16.c  builtin-rvp-crsa16.c  builtin-rvp-insb.c  builtin-rvp-kmar64.c  builtin-rvp-mfb.c  builtin-rvp-mul32.c  builtin-rvp-pbsad.c  builtin-rvp-pbsada.c  builtin-rvp-pkbb16.c  builtin-rvp-pkbt16.c  builtin-rvp-pktb16.c  builtin-rvp-pktt16.c  builtin-rvp-radd16.c  builtin-rvp-radd64.c  builtin-rvp-radd8.c  builtin-rvp-raddw.c  builtin-rvp-rcras16.c  builtin-rvp-rcrsa16.c  (+95 more)
gcc/testsuite/lib/: target-supports.exp
gcc/testsuite/python.dg/: t_class_1.py  t_class_attrib_1.py  t_concat_1.py  t_date_1.py  t_express_1.py  t_express_2.py  t_fun_1.py  t_loop_1.py  t_method_1.py  t_number_1.py  t_print_2.py  t_recursion_1.py
include/: ChangeLog  longlong.h
libatomic/: configure.tgt
libcpp/: expr.c  macro.c
libffi/: ChangeLog
libgcc/: ChangeLog  Makefile.in  config.host  configure  configure.ac
libgcc/config/riscv/: atomic.c  bswapdi2.S  div.S  linux-unwind.h  muldi3.S  multi3.S  multi3.c  save-restore.S  sfp-machine.h  t-elf  t-elf64  t-softfp32  t-softfp64
libgcc/soft-fp/: eqhf2.c  extendhfdf2.c  extendhfsf2.c  fixhfdi.c  fixhfsi.c  fixunshfdi.c  fixunshfsi.c  floatdihf.c  floatsihf.c  floatundihf.c  floatunsihf.c  gehf2.c  half.h  lehf2.c  neghf2.c  truncdfhf2.c  truncsfhf2.c  unordhf2.c
libgomp/: configure  configure.ac
libgpython/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libgpython/autom4te.cache/: output.0  output.1  output.6  output.7  requests  traces.0  traces.1  traces.6  traces.7
libgpython/config/: autorun.sh  config.sub  depcomp  missing
libgpython/include/gpython/: gpython.h  objects.h  runtime.h  vectors.h
libgpython/runtime/: obj-class.c  obj-functor.c  obj-integer.c  py-main.c  py-obj_class.c  py-obj_classmethod.c  py-obj_integer.c  py-obj_list.c  py-obj_staticmethod.c  py-routines.c  py-runtime.c  py-type-utils.c  py-vectors.c
libiberty/: simple-object.c
libsanitizer/sanitizer_common/: sanitizer_linux.cc  sanitizer_platform.h  sanitizer_platform_limits_linux.cc  sanitizer_platform_limits_posix.h
libstdc++-v3/: ChangeLog
(+22630 files in other folders)
